opam-version: "2.0"
synopsis: "Melange bindings for recharts"
description: "Melange bindings for recharts JavaScript library."
maintainer: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
authors: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
license: "MIT"
tags: ["melange" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-recharts/"
bug-reports: "https://github.com/ahrefs/melange-recharts/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason" {>= "3.10.0"}
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx" {>= "0.14.0"}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-recharts.git"
depexts: [
  ["recharts"] {npm-version = "^2.1.12"}
]
pin-depends: [
  ["melange.dev" "git+https://github.com/melange-re/melange#982cba971fa662439f0675465ef854424771ca3d"]
  ["reason-react.dev" "https://github.com/reasonml/reason-react/archive/f799ac03d79d39de04fe937075607c348f8053b4.tar.gz"]
  ["reason-react-ppx.dev" "https://github.com/reasonml/reason-react/archive/f799ac03d79d39de04fe937075607c348f8053b4.tar.gz"]
]
