opam-version: "2.0"
synopsis: "Melange bindings for recharts"
description: "Melange bindings for recharts JavaScript library."
maintainer: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
authors: [
  "Liubomyr Mykhalchenko <liubomyr.mykhalchenko@ahrefs.com>"
]
license: "MIT"
tags: ["melange" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-recharts/"
bug-reports: "https://github.com/ahrefs/melange-recharts/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "3.0.0"}
  "reason" {>= "3.10.0"}
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx" {>= "0.14.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-recharts.git"
depexts: [
  ["recharts"] {npm-version = "^3.1.2"}
]
